--- a/styles.css
+++ b/styles.css
@@ -48,3 +48,10 @@ header > h1 {
   padding: 3px;
   text-align: center;
 }
+
+.start-game {
+  font-size: 14px;
+  color: black;
+  text-align: center;
+  font-family: Asap, sans-serif;
+}
